tests/ui/missing_pin_data.stderr
error[E0599]: no associated item named `__pin_data` found for struct `Foo` in the current scope
  --> tests/ui/missing_pin_data.rs:11:9
   |
5  | struct Foo {
   | ---------- associated item `__pin_data` not found for this struct
...
11 |         pin_init!(Self { a: 42 })
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^ associated item not found in `Foo`
   |
   = help: items from traits can only be used if the trait is implemented and in scope
   = note: the following trait defines an item `__pin_data`, perhaps you need to implement it:
           candidate #1: `HasPinData`
   = note: this error originates in the macro `pin_init` (in Nightly builds, run with -Z macro-backtrace for more info)
help: there is an associated function `__init_data` with a similar name
  --> src/lib.rs
   |
   |             @has_data(HasPinData, __init_data),
   |                                   ~~~~~~~~~~~
